--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>fitness website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playwrite+CZ:wght@100..400&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav>
@@ -19,5 +22,16 @@
         <label id="icon"><i class="fa-solid fa-bars"></i>
         </label>
     </nav>
+    <section class="hero">
+        <div class="hero-text">
+            <p>Get Body In <br> <span>Shape</span> & Stay <br>healthy</p>
+            <p class="new">A huge selection of health and fitness content,healthy recipes and transformation stories to help you get fit and stay fit!</p>
+            <a href="#">Join club now</a>
+            <a href="#" class="ctaa">Download app now</a>
+        </div>
+        <div class="hero-img">
+            <img src="images/Images 2.png" alt="">
+        </div>
+    </section>
 </body>
 </html>
