--- a/index.html
+++ b/index.html
@@ -31,7 +31,60 @@
         </div>
         <div class="hero-img">
             <img src="images/Images 2.png" alt="">
-        </div>
+            <div>
     </section>
+    <div class="habit-section">
+        <div class="container">
+            <div class="row">
+                <div class="title">
+                    <h1>Change Your Habits</h1>
+                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or 
+                        access to a gym</p>
+                </div>
+            </div>
+            <div class="habit-card">
+                <div class="card">
+                    <div class="img-section">
+                        <img src="images/image 3.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>Movement</h3>
+                        <p>We believe fitness should be 
+                            accessible to everyone</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-section">
+                        <img src="images/image 2.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>Time</h3>
+                        <p>We believe fitness should be 
+                            accessible to everyone</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-section">
+                        <img src="images/image 4.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>Practice</h3>
+                        <p>We believe fitness should be 
+                            accessible to everyone</p>
+                    </div>
+                </div>
+                <div class="card">
+                    <div class="img-section">
+                        <img src="images/image 5.png" alt="">
+                    </div>
+                    <div class="content">
+                        <h3>Weight Loss</h3>
+                        <p>We believe fitness should be 
+                            accessible to everyone</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
