--- a/index.html
+++ b/index.html
@@ -86,5 +86,20 @@
             </div>
         </div>
     </div>
+    <div class="box">
+        <div class="wrapper" >
+            <div class="contest">
+                <h2>Run an Extra <br>Mile Easily</h2>
+                <p>We believe fitness should be accessible to everyone, 
+                    everywhere, regardless of income or access to a gym. With 
+                    hundreds of professional workouts</p>
+                    <a href="#" class="btn">Join Now</a>
+            </div>
+            <div class="images">
+                <img src="images/run.jpg" alt="">
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
