--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
         </div>
     </div>
-    <div class="box">
+    <section>
         <div class="wrapper" >
             <div class="contest">
                 <h2>Run an Extra <br>Mile Easily</h2>
@@ -99,7 +99,72 @@
                 <img src="images/run.jpg" alt="">
             </div>
         </div>
+    </section>
+    <div class="habit-section">
+        <div class="container">
+            <div class="row">
+                <div class="title">
+                    <h1>BMI Calculator</h1>
+                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or 
+                        access to a gym</p>
+                </div>
+            </div>
+            <div class="bmii">
+                <div class="table-container">
+        <h1 class="header">BMI Calculator Chart</h1>
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>BMI</th>
+                    <th>Weight Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td data-label="BMI">Below 18.</td>
+                    <td data-label="Weight Status">Underweight</td>
+                </tr>
+                <tr>
+                    <td data-label="BMI">18.5-24.9</td>
+                    <td data-label="Weight Status">Healthy</td>
+                </tr>
+                <tr>
+                    <td data-label="BMI">25.0-29.9</td>
+                    <td data-label="Weight Status">Overweight</td>
+                </tr>
+                <tr>
+                    <td data-label="BMI">30.0 and Above</td>
+                    <td data-label="Weight Status">Obese</td>
+                </tr>
+            </tbody>
+        </table>
     </div>
+    <form>
+        <h1 class="header">calculate your BMI</h1>
+       <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or access to a gym.</p>
+        <div class="column">
+             <div class="input-group">
+            <input type="text" placeholder="Height/cm">
+        </div>
+        <div class="input-group">
+            <input type="text" placeholder="Weight/kg">
+        </div>
+    </div>
+        <div class="colums">
+        <div class="input-group">
+            <input type="text" placeholder="Age">
+            </div>
+        <div class="input-group">
+            <input type="text" placeholder="Sex">
+            <label id="arrow"><i class="fa-solid fa-angle-down"></i></label>
+        </div>
+    </div>
+    <div class="input-group">
+        <input type="text" placeholder="Select an activity factor">
+        <label id="arrow"><i class="fa-solid fa-angle-down"></i></label>
+    </div>
+    <a href="#" class="btn">Calculate</a>
+    </form>
 </body>
 
 </html>
