--- a/index.html
+++ b/index.html
@@ -165,6 +165,84 @@
     </div>
     <a href="#" class="btn">Calculate</a>
     </form>
-</body>
-
+    </div>
+    <br><br>
+    <div class="habit-section">
+        <div class="container">
+            <div class="row">
+                <div class="title">
+                    <h1>Change Your Habits</h1>
+                    <p>We believe fitness should be accessible to everyone, everywhere, regardless of income or 
+                        access to a gym</p>
+                </div>
+            </div>
+            <div class="other-container">
+                <div class="box-container">
+            <div class="box">
+                <img src="images/trainer1.png" alt="">
+                <h3>Jerome Bell</h3>
+                <p>Trainer</p>
+            </div>
+            <div class="box">
+                <img src="images/trainer2.png" alt="">
+                <h3>Cameron Williamson</h3>
+                <p>Trainer</p>
+            </div>
+            <div class="box">
+                <img src="images/trainer3.png" alt="">
+                <h3>Darrell Steward</h3>
+                <p>Trainer</p>
+            </div>
+            <div class="box">
+                <img src="images/trainer4.png" alt="">
+                <h3>Dianne Russell</h3>
+                <p>Trainer</p>
+            </div>
+            <div class="box">
+                <img src="images/trainer5.png" alt="">
+                <h3>Cody Fisher</h3>
+                <p>Trainer</p>
+            </div>
+            <div class="box">
+                <img src="images/trainer6.png" alt="">
+                <h3>Theresa Webb</h3>
+                <p>Trainer</p>
+            </div>
+            </div>
+            </div>
+       <footer>
+        <div class="foter">
+            <div class="about">
+                <h2>Fitness</h2>
+                <p>We believe fitness should be accessible to everyone, 
+                    everywhere, regardless of income or access to a gym. With 
+                    hundreds of professional workouts</p>
+            </div>
+            <div class="links">
+                <h2>Get Started</h2>
+                <ul>
+                    <li><a href="#">Service</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Affiliate Program</a></li>
+                    <li><a href="#">About Us</a></li>
+                </ul>
+            </div>
+            <div class="links">
+                <h2>Get Started</h2>
+                <ul>
+                    <li><a href="#">Fitness</a></li>
+                    <li><a href="#">Platform</a></li>
+                    <li><a href="#">Workout Libary</a></li>
+                    <li><a href="#">App Design</a></li>
+                </ul>
+            </div>
+        </div>
+        <br>
+        <br>
+        <hr>
+       </footer>
+       <div class="copyright">
+        <p>All right reserved @Fitness 2024</p>
+       </div>
+    </body>
 </html>
