--- a/index.html
+++ b/index.html
@@ -210,6 +210,108 @@
             </div>
             </div>
             </div>
+            <br>
+            <section id="testimonials">
+            <div class="testimonial-heading">
+                <span>Comments</span>
+                <h1>Clients Says</h1>
+            </div>
+            <div class="testimonial-box-container">
+                <div class="testimonial-box">
+                    <div class="box-top">
+                        <div class="profile">
+                            <div class="profile-img">
+                                <img src="images/download (1).jpg" alt="">
+                            </div>
+                            <div class="name-user">
+                                <strong>Sadia Ahmed</strong>
+                                <span>@sadiaahmed</span>
+                            </div>
+                        </div>
+                        <div class="reviews">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </div>
+                    <div class="client-comment">
+                        <p>Amazing facility, top equipment and great environment.</p>
+                    </div>
+                </div>
+                <div class="testimonial-box">
+                    <div class="box-top">
+                        <div class="profile">
+                            <div class="profile-img">
+                                <img src="images/download.jpg" alt="">
+                            </div>
+                            <div class="name-user">
+                                <strong>j.k rowling</strong>
+                                <span>@jkrowling</span>
+                            </div>
+                        </div>
+                        <div class="reviews">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </div>
+                    <div class="client-comment">
+                        <p>Good service with friendly staff and super clean and comfortable gym for everyone from beginners to professional athletes to train at.</p>
+                    </div>
+                </div>
+                <div class="testimonial-box">
+                    <div class="box-top">
+                        <div class="profile">
+                            <div class="profile-img">
+                                <img src="images/download (2).jpg" alt="">
+                            </div>
+                            <div class="name-user">
+                                <strong>Harry potter</strong>
+                                <span>@harrypotter</span>
+                            </div>
+                        </div>
+                        <div class="reviews">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </div>
+                    <div class="client-comment">
+                        <p>This gym is amazing.</p>
+                    </div>
+                </div>
+                <div class="testimonial-box">
+                    <div class="box-top">
+                        <div class="profile">
+                            <div class="profile-img">
+                                <img src="images/images (1).jpg" alt="">
+                            </div>
+                            <div class="name-user">
+                                <strong>Oliver</strong>
+                                <span>@olliver</span>
+                            </div>
+                        </div>
+                        <div class="reviews">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="far fa-star"></i>
+                        </div>
+                    </div>
+                    <div class="client-comment">
+                        <p>Great experience, great machines, and great staff</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <br>
        <footer>
         <div class="foter">
             <div class="about">
@@ -240,9 +342,9 @@
         <br>
         <br>
         <hr>
+        <div class="copyright">
+            <p>All right reserved @Fitness 2024</p>
+           </div>
        </footer>
-       <div class="copyright">
-        <p>All right reserved @Fitness 2024</p>
-       </div>
     </body>
 </html>
